--- a/myhomework/day29/package.json
+++ b/myhomework/day29/package.json
@@ -17,6 +17,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-lite-youtube-embed": "^2.4.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
