--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
