--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -23,6 +23,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
+    "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
