--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
 		"react": "^18.3.1",
 		"react-daum-postcode": "^3.1.3",
 		"react-dom": "^18.3.1",
+		"react-intersection-observer": "^9.13.1",
 		"react-youtube": "^10.1.0",
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.5.3",
