--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
