--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -10,11 +10,15 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
+    "antd": "^5.21.4",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-daum-postcode": "^3.1.3",
+    "react-dom": "^18",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
