--- a/cna-homework/package.json
+++ b/cna-homework/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14"
   },
