--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -14,7 +14,6 @@
     "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.1",
     "@apollo/client": "^3.6.2",
-    "@tanstack/react-table": "^8.20.5",
     "antd": "^5.21.2",
     "antd-style": "^3.7.0",
     "date-fns": "^4.1.0",
@@ -22,12 +21,14 @@
     "graphql": "^15.8.0",
     "lodash": "^4.17.21",
     "next": "14.2.13",
-    "quill-image-resize-module-ts": "^3.0.3",
+    "nvm": "^0.0.4",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-player": "^2.16.0",
     "react-quill-new": "^3.3.2",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
