--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -22,7 +22,7 @@
     "lodash": "^4.17.21",
     "next": "14.2.13",
     "nvm": "^0.0.4",
-    "quill-image-resize-module-react": "^3.0.0",
+    "quill-resize-image": "^1.0.5",
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
