--- a/server/package.json
+++ b/server/package.json
@@ -33,8 +33,10 @@
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.4.2",
         "@nestjs/typeorm": "^10.0.2",
+        "@types/aws-sdk": "^2.7.0",
         "@types/bcrypt": "^5.0.2",
         "apollo-server-express": "^3.13.0",
+        "aws-sdk": "^2.1691.0",
         "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
