--- a/maincamp/my-app/package.json
+++ b/maincamp/my-app/package.json
@@ -16,7 +16,8 @@
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
