--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "next": "14.2.13",
     "nvm": "^0.0.4",
+    "quill-image-drop-and-paste": "^2.0.1",
     "quill-resize-image": "^1.0.5",
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
