--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"codegen": "graphql-codegen --config ./config/codegen.ts"
+		"codegen": "graphql-codegen --config ./config/codegen_config.ts"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
@@ -23,6 +23,7 @@
 		"clsx": "^2.1.1",
 		"embla-carousel-autoplay": "^8.3.0",
 		"embla-carousel-react": "^8.3.0",
+		"firebase": "^10.14.1",
 		"graphql": "^16.9.0",
 		"lucide-react": "^0.451.0",
 		"next": "14.2.12",
