--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
     "antd": "^5.21.2",
+    "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
