--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "antd": "^5.21.3",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.14.1",
     "flatpickr": "^4.6.13",
     "graphql": "^16.9.0",
     "next": "14.2.13",
