--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
+		"@aws-sdk/client-s3": "^3.674.0",
 		"@graphql-codegen/client-preset": "^4.4.0",
 		"@graphql-codegen/fragment-matcher": "^5.0.2",
 		"@graphql-codegen/typescript-react-apollo": "^4.3.2",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.15",
