--- a/study/package.json
+++ b/study/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.21.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "firebase": "^10.14.1",
     "graphql": "^15.8.0",
     "lodash": "^4.17.21",
     "next": "14.2.13",
