--- a/03-react-hw/DAY29/package.json
+++ b/03-react-hw/DAY29/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
     "graphql": "^16.9.0",
     "next": "14.2.15",
     "react": "^18",
