--- a/03-react-hw/DAY29/package.json
+++ b/03-react-hw/DAY29/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.11.8",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "graphql": "^16.9.0",
     "next": "14.2.15",
