--- a/frontend/next-homework/package.json
+++ b/frontend/next-homework/package.json
@@ -10,9 +10,12 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
-    "antd": "^5.21.3",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
+    "antd": "^5.21.2",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
@@ -23,7 +26,7 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/cli": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
