--- a/02-main_camp/Day35/package.json
+++ b/02-main_camp/Day35/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
     "antd": "^5.21.2",
+    "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
