--- a/메인캠프/maincamp/my-board/package.json
+++ b/메인캠프/maincamp/my-board/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@tailwindcss/typography": "^0.5.15",
     "antd": "^5.21.2",
+    "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "pretendard": "^1.3.9",
