--- a/study/package.json
+++ b/study/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
     "antd": "^5.21.3",
+    "apollo-upload-client": "^18.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18.3.9",
