--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "codegen": "graphql-codegen --config ./configs/codegen.config.ts"
     },
     "dependencies": {
         "@apollo/server": "^4.11.0",
