--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.5",
 		"embla-carousel-autoplay": "^8.3.0",
 		"embla-carousel-react": "^8.3.0",
 		"firebase": "^10.14.1",
