--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.2",
+		"@graphql-codegen/near-operation-file-preset": "^3.0.0",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
