--- a/cna-homework/package.json
+++ b/cna-homework/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
+    "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18.3.1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
