--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.11.8",
+        "antd": "^5.21.4",
         "graphql": "^16.9.0",
         "next": "14.2.13",
         "react": "^18",
@@ -18,6 +19,7 @@
     },
     "devDependencies": {
         "@graphql-codegen/cli": "5.0.3",
+        "@graphql-codegen/client-preset": "4.4.0",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
@@ -25,7 +27,6 @@
         "eslint-config-next": "14.2.13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5.6.3",
-        "@graphql-codegen/client-preset": "4.4.0"
+        "typescript": "^5.6.3"
     }
 }
