--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
     "antd": "^5.21.3",
+    "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
@@ -28,6 +29,7 @@
     "@graphql-codegen/client-preset": "4.3.3",
     "@graphql-codegen/introspection": "4.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
