--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -14,6 +14,8 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
+    "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
@@ -29,6 +31,7 @@
     "@eslint/js": "^9.9.0",
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "22.7.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
