--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
