--- a/메인캠프/maincamp/my-board/package.json
+++ b/메인캠프/maincamp/my-board/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@tailwindcss/typography": "^0.5.15",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
