--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
