--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -17,6 +17,7 @@
     "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
@@ -32,6 +33,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "22.7.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
