--- a/02-main_camp/Day36/package.json
+++ b/02-main_camp/Day36/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
@@ -27,6 +28,7 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
