--- a/메인캠프/maincamp/my-board/package.json
+++ b/메인캠프/maincamp/my-board/package.json
@@ -17,6 +17,8 @@
     "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "14.2.13",
     "pretendard": "^1.3.9",
     "react": "^18",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
