--- a/03-trip/03-03-Next/package.json
+++ b/03-trip/03-03-Next/package.json
@@ -15,6 +15,7 @@
         "@svgr/webpack": "^8.1.0",
         "antd": "^5.21.3",
         "apollo-upload-client": "^18.0.1",
+        "lodash": "^4.17.21",
         "next": "14.2.13",
         "react": "^18",
         "react-daum-postcode": "^3.1.3",
@@ -27,6 +28,7 @@
     "devDependencies": {
         "@graphql-codegen/cli": "^5.0.2",
         "@types/apollo-upload-client": "^18.0.0",
+        "@types/lodash": "^4.17.12",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
