--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.14.1",
     "flatpickr": "^4.6.13",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "7.0.0",
