--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -17,6 +17,7 @@
     "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
