--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -17,10 +17,13 @@
     "antd": "^5.21.2",
     "antd-style": "^3.7.0",
     "apollo-upload-client": "^18.0.1",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
+    "firebase": "^11.0.0",
     "graphql": "^15.8.0",
     "lodash": "^4.17.21",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "quill": "1.3.4",
     "quill-image-drop-and-paste": "^2.0.1",
     "quill-resize-image": "^1.0.5",
@@ -38,6 +41,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18.3.9",
