--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -17,6 +17,7 @@
     "@types/lodash": "^4.17.12",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
+    "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "lodash": "^4.17.21",
