--- a/03-react-hw/DAY29/package.json
+++ b/03-react-hw/DAY29/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
