--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -16,8 +16,10 @@
     "antd": "^5.21.3",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "^14.2.13",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -30,7 +32,9 @@
     "@graphql-codegen/introspection": "4.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/react": "^18.3.7",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
