--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "^18",
         "react-daum-postcode": "^3.1.3",
         "react-dom": "^18",
+        "react-player": "^2.16.0",
         "swiper": "^11.1.14"
     },
     "devDependencies": {
