--- a/03-react-hw/DAY29/package.json
+++ b/03-react-hw/DAY29/package.json
@@ -34,7 +34,8 @@
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
