--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
         "@nestjs/core": "^10.0.0",
         "@nestjs/graphql": "^12.2.0",
         "@nestjs/mapped-types": "*",
+        "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.4.2",
         "@nestjs/typeorm": "^10.0.2",
@@ -44,6 +45,8 @@
         "class-validator": "^0.14.1",
         "graphql": "^16.9.0",
         "mongodb": "^5.9.2",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
         "pg": "^8.13.0",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
