--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.0.0",
         "@nestjs/graphql": "^12.2.0",
+        "@nestjs/jwt": "^10.2.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
@@ -46,6 +47,7 @@
         "graphql": "^16.9.0",
         "mongodb": "^5.9.2",
         "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "pg": "^8.13.0",
         "reflect-metadata": "^0.2.0",
