--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -17,7 +17,6 @@
     "antd": "^5.21.2",
     "antd-style": "^3.7.0",
     "apollo-upload-client": "^18.0.1",
-    "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.0",
     "graphql": "^15.8.0",
@@ -34,14 +33,13 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
     "react-quill-new": "^3.3.3",
-    "react-redux": "^9.1.2",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
     "@types/apollo-upload-client": "^18.0.0",
-    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18.3.9",
