--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.1.2",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
+    "codegen": "^0.1.0",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "lodash": "^4.17.21",
