--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -23,7 +23,8 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
