--- a/03-trip/03-03-Next/.eslintrc.json
+++ b/03-trip/03-03-Next/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+    "extends": ["next/core-web-vitals", "next/typescript"],
+    "rules": {
+        "@typescript-eslint/no-explicit-any": "warn",
+        "react/display-name": "off",
+        "react-hooks/exhaustive-deps": "off"
+    }
 }
