--- a/02-main_camp/Day37/package.json
+++ b/02-main_camp/Day37/package.json
@@ -17,6 +17,7 @@
     "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
@@ -25,10 +26,12 @@
     "react-slick": "^0.30.2",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
