--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
         "@nestjs/typeorm": "^10.0.2",
         "@types/aws-sdk": "^2.7.0",
         "@types/bcrypt": "^5.0.2",
+        "@types/passport-jwt": "^4.0.1",
         "apollo-server-express": "^3.13.0",
         "aws-sdk": "^2.1691.0",
         "bcrypt": "^5.1.1",
