--- a/side-project/package.json
+++ b/side-project/package.json
@@ -11,22 +11,23 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@graphql-codegen/cli": "^5.0.3",
+    "@tailwindcss/typography": "^0.5.15",
     "antd": "^5.21.6",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "next": "14.2.13",
+    "react": "^18",
+    "react-dom": "^18",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
