--- a/study/package.json
+++ b/study/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
     "@apollo/client": "^3.6.2",
+    "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
     "antd": "^5.21.5",
@@ -33,6 +34,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "swiper": "^11.1.14",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
