--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -23,7 +23,8 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
