--- a/03-trip/03-03-Next/package.json
+++ b/03-trip/03-03-Next/package.json
@@ -23,6 +23,8 @@
         "react-infinite-scroll-component": "^6.1.0",
         "react-youtube": "^10.1.0",
         "styled-components": "^6.1.13",
+        "sweetalert2": "^11.14.4",
+        "sweetalert2-react-content": "^5.0.7",
         "swiper": "^11.1.14",
         "zustand": "^5.0.0"
     },
