--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^7.5.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14",
     "zustand": "^5.0.0"
