--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
+    "@hookform/resolvers": "^3.9.1",
     "antd": "^5.21.3",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
