--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -22,10 +22,12 @@
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
