--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,5 +18,6 @@
         "forceConsistentCasingInFileNames": false,
         "noFallthroughCasesInSwitch": false
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "configs"],
+    "exclude": ["node_modules", "dist"]
 }
