--- a/todaktodak/package.json
+++ b/todaktodak/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "zustand": "^5.0.0"
   },
