--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
+    "@hookform/resolvers": "^3.9.1",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
@@ -22,8 +23,10 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
