--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
+    "@hookform/resolvers": "^3.9.1",
     "antd": "^5.21.3",
     "apollo-upload-client": "^18.0.1",
     "bootstrap": "^5.3.3",
@@ -26,9 +27,12 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
+    "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
+    "react-quill": "^2.0.0",
     "swiper": "^11.1.14",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
