--- a/side-project/package.json
+++ b/side-project/package.json
@@ -11,17 +11,25 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@graphql-codegen/typescript": "^4.1.1",
+    "@graphql-codegen/typescript-operations": "^4.3.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@hookform/resolvers": "^3.9.1",
     "@tailwindcss/typography": "^0.5.15",
     "antd": "^5.21.6",
     "apollo-upload-client": "^18.0.1",
+    "codegen": "^0.1.0",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
