--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
 		"embla-carousel-react": "^8.3.0",
 		"firebase": "^10.14.1",
 		"graphql": "^16.9.0",
+		"graphql-codegen-typescript-validation-schema": "^0.16.0",
 		"lucide-react": "^0.451.0",
 		"next": "14",
 		"pretendard": "^1.3.9",
@@ -39,6 +40,7 @@
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.5.3",
 		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8",
 		"zustand": "^5.0.0-rc.2"
 	},
 	"devDependencies": {
