--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -13,11 +13,14 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "antd": "^5.21.4",
+    "firebase": "^11.0.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
