--- a/02-main_camp/Day38/package.json
+++ b/02-main_camp/Day38/package.json
@@ -14,8 +14,10 @@
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
     "@react-icons/all-files": "^4.1.0",
+    "@types/classnames": "^2.3.4",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
+    "classnames": "^2.5.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "lodash": "^4.17.21",
