--- a/todaktodak/package.json
+++ b/todaktodak/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "apollo-upload-client": "^18.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "graphql": "^16.9.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-daum-postcode": "^3.1.3",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
