--- a/main-app/package.json
+++ b/main-app/package.json
@@ -11,6 +11,7 @@
         "codegen": "graphql-codegen --config codegen.ts"
     },
     "dependencies": {
+        "@ant-design/icons": "^5.5.1",
         "@apollo/client": "^3.11.8",
         "antd": "^5.21.6",
         "apollo-upload-client": "^18.0.1",
