--- a/main-app/package.json
+++ b/main-app/package.json
@@ -17,10 +17,10 @@
         "apollo-upload-client": "^18.0.1",
         "graphql": "^16.9.0",
         "lodash": "^4.17.21",
-        "next": "^15.0.2",
-        "react": "19.0.0-rc-02c0e824-20241028",
+        "next": "^14",
+        "react": "^18",
         "react-daum-postcode": "^3.1.3",
-        "react-dom": "19.0.0-rc-02c0e824-20241028",
+        "react-dom": "^18",
         "react-infinite-scroll-component": "^6.1.0",
         "react-youtube": "^10.1.0",
         "sweetalert2": "^11.14.4",
