--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -34,6 +34,7 @@
     "react-player": "^2.16.0",
     "react-quill-new": "^3.3.3",
     "swiper": "^11.1.14",
+    "zen-observable": "^0.10.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "@types/zen-observable": "^0.8.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
